test/fixtures/fixtures/type-error/valueAsTyoe.lys.ast.desugar
|-Document(0,22)
  |-(AstCons)
    |-(AstCons)
      |-VarDirective(0,9)
        |-(AstCons)
          |-NoModifier(0,0)
            <Rule0>
          |-VarDeclaration(0,9)
            |-(AstCons)
              |-NameIdentifier(4,5)
                |-Identifier=b
              |-NumberLiteral=1
      |-VarDirective(10,22)
        |-(AstCons)
          |-NoModifier(10,10)
            <Rule0>
          |-VarDeclaration(10,22)
            |-(AstCons)
              |-NameIdentifier(14,15)
                |-Identifier=a
              |-(AstCons)
                |-Reference(17,18)
                  |-QName(17,18)
                    |-NameIdentifier(17,18)
                      |-Identifier=b
                |-NumberLiteral=1
    |-EndOfFile=